# rust-hyperopt

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  renovate.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yaml  publish.yaml
src/: cli.rs  consts.rs  convert.rs  iter.rs  kde.rs  kernel.rs  lib.rs  main.rs  optimizer.rs  prelude.rs  rand.rs  range.rs  tracing.rs  traits.rs
src/consts/: f32.rs  f64.rs
src/kde/: component.rs
src/kernel/: binomial.rs  continuous.rs  discrete.rs  epanechnikov.rs  gaussian.rs  multi.rs  uniform.rs  universal.rs
src/kernel/continuous/: epanechnikov.rs  gaussian.rs  uniform.rs
src/kernel/discrete/: binomial.rs
src/kernel/universal/: uniform.rs
src/optimizer/: trial.rs
src/rand/: uniform.rs
src/traits/: constants.rs  loopback.rs  ops.rs  shortcuts.rs
