[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["mathematics", "science"]
description = "Tree-of-Parzen-estimators hyperparameter optimization"
edition = "2021"
keywords = ["machine-learning", "optimization", "hyperparameters", "kde"]
license-file = "LICENSE"
name = "hyperopt"
publish = false
readme = "README.md"
repository = "https://github.com/eigenein/rust-hyperopt"
version = "0.0.1"

[lib]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[lints.clippy]

# Categories:
all = "warn"
nursery = "warn"
pedantic = "warn"

# Individual flags:
future_not_send = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
fastrand = "2.0.2"
num-integer = "0.1.46"
num-iter = "0.1.44"
num-traits = "0.2.18"

[dev-dependencies]
approx = "0.5.1"
ordered-float = "4.2.0"
