[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = ["mathematics", "science"]
description = "Tree-of-Parzen-estimators hyperparameter optimization"
edition = "2021"
keywords = ["machine-learning", "optimization", "hyperparameters", "kde"]
license-file = "LICENSE"
name = "hyperopt"
publish = true
readme = "README.md"
repository = "https://github.com/eigenein/rust-hyperopt"
version = "0.0.11"

[lib]

[features]
ordered-float = ["dep:ordered-float"]

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[lints.clippy]

# Categories:
all = "warn"
nursery = "warn"
pedantic = "warn"

# Individual flags:
future_not_send = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
fastrand = "2.0.2"
num-integer = "0.1.46"
num-iter = "0.1.44"
num-traits = "0.2.18"
ordered-float = { version = "4.2.0", optional = true }

[dev-dependencies]
approx = "0.5.1"
